--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -12,7 +12,7 @@ jobs:
               run: |
                 apt update && apt install -y git
                 curl --show-error --silent https://getcomposer.org/installer | php
-                php bin/composer.phar install --no-scripts --no-progress
+                php composer.phar install --no-scripts --no-progress
 
             - name: Run test
               run: |
