--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -11,6 +11,8 @@ jobs:
             - name: before_script
               run: |
                 composer install
+        
+        steps:
             - name: Run test
               run: |
                 bin/phpunit tests/Unit
