--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -9,7 +9,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: before_script
-              use: docker://composer:latest
+              uses: docker://composer:latest
               with:
                 args: install
             - name: Run test
